# media_manipulator

./: .gitignore  software_instructions.md
media-organizer/: README.md
media-organizer/backend/: build.py  pyproject.toml  requirements.txt  run_server.py
media-organizer/backend/app/: __init__.py  config.py  main.py
media-organizer/backend/app/api/: files.py  health.py  plans.py  scan.py  search.py  settings.py
media-organizer/backend/app/db/: database.py  models.py  schema.sql
media-organizer/backend/app/llm/: __init__.py  gemini.py
media-organizer/backend/app/media/: audio_meta.py  detector.py  grouper.py  parser.py  scanner.py
media-organizer/backend/app/ops/: __init__.py  executor.py  planner.py  rollback.py  templates.py
media-organizer/backend/app/providers/: __init__.py  audnexus.py  cache.py  google_books.py
media-organizer/backend/app/utils/: __init__.py  hashing.py
media-organizer/backend/scripts/: scan_dry_run.py
media-organizer/backend/tests/: test_grouper.py  test_parser.py  test_scanner.py
media-organizer/backend/tests_unittest/: __init__.py  test_grouper_unittest.py  test_parser_unittest.py  test_scanner_unittest.py
media-organizer/frontend/: index.html  package-lock.json  package.json
media-organizer/frontend/src/: App.tsx  api.ts  index.css
media-organizer/frontend/src-tauri/: Cargo.toml  tauri.conf.json
media-organizer/frontend/src-tauri/capabilities/: default.json
media-organizer/frontend/src-tauri/src/: lib.rs
media-organizer/frontend/src/pages/: Dashboard.tsx  FileDetail.tsx  Plans.tsx  ReviewQueue.tsx  ScanSetup.tsx  (+1 more)
